--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -91,10 +91,10 @@ jobs:
           tar -xvzf GeoLite2-Country.tar.gz
           tar -xvzf GeoLite2-ASN.tar.gz
           
-          cp GeoLite2-Country_*/*.mmdb ./output/
-          cp GeoLite2-ASN_*/*.mmdb ./output/
-          cp GeoLite2-Country-CSV_*/{GeoLite2-Country-Blocks-*,GeoLite2-Country-Locations-en}.csv ./output/
-          cp GeoLite2-ASN-CSV_*/*.csv ./output/
+          cp GeoLite2-Country_*/*.mmdb ../output/
+          cp GeoLite2-ASN_*/*.mmdb ../output/
+          cp GeoLite2-Country-CSV_*/{GeoLite2-Country-Blocks-*,GeoLite2-Country-Locations-en}.csv ../output/
+          cp GeoLite2-ASN-CSV_*/*.csv ../output/
 
           mkdir -p geolite2
           cp GeoLite2-Country-CSV_*/*.csv geolite2/
