--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -97,10 +97,11 @@ jobs:
           cp GeoLite2-Country-CSV_*/{GeoLite2-Country-Blocks-*,GeoLite2-Country-Locations-en}.csv ../output/
           cp GeoLite2-ASN-CSV_*/*.csv ../output/
           ls -lFh
+          echo "GEOLITE2"
 
-          ls -lFh geolite2
-          cp GeoLite2-Country-CSV_*/*.csv geolite2/
-          cp GeoLite2-ASN-CSV_*/*.csv geolite2/
+          ls -lFh ../output/
+          #cp GeoLite2-Country-CSV_*/*.csv geolite2/
+          #cp GeoLite2-ASN-CSV_*/*.csv geolite2/
 
       - name: Build geoip files
         run: |
