--- a/geoip-build/config.json
+++ b/geoip-build/config.json
@@ -29,7 +29,7 @@
       "action": "add",
       "args": {
         "name": "lokal",
-        "uri": "./geoip-build/asset/lokal.txt",
+        "uri": "./asset/lokal.txt",
         "onlyIPType": "ipv4"
       }
     },
@@ -39,7 +39,7 @@
       "type": "v2rayGeoIPDat",
       "action": "output",
       "args": {
-        "outputDir": "./output",
+        "outputDir": "../output",
         "outputName": "geoip.dat"
       }
     },
