--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -165,12 +165,7 @@ jobs:
 
       - name: Move files
         run: |
-          ls -lFh
-          ls -lFh community
-          ls -lFh output
-          ls -lFh geoip-build
-          ls -lFh geosite-build/publish
-          install -Dp ./publish/geosite.dat ./output/geosite.dat
+          install -Dp ./geosite-build/publish/geosite.dat ./output/geosite.dat
 
       - name: Upload files to GitHub release
         uses: svenstaro/upload-release-action@v2
