--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,44 +36,6 @@ jobs:
           echo "OISD_SMALL=https://small.oisd.nl/dnsmasq" >> $GITHUB_ENV
         shell: bash
 
-      - name: Delete old releases and tags
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          # Get the list of all tags
-          TAGS=$(curl -s -H "Authorization: token $GITHUB_TOKEN" \
-            https://api.github.com/repos/${{ github.repository }}/git/refs/tags | \
-            jq -r '.[].ref' | sed 's|refs/tags/||')
-
-          # Loop through tags and delete them
-          for TAG in $TAGS; do
-            echo "Deleting tag: $TAG"
-            curl -X DELETE -H "Authorization: token $GITHUB_TOKEN" \
-              "https://api.github.com/repos/${{ github.repository }}/git/refs/tags/$TAG"
-          done
-
-          # Get the list of all draft releases and delete them
-          DRAFTS=$(curl -s -H "Authorization: token $GITHUB_TOKEN" \
-            https://api.github.com/repos/${{ github.repository }}/releases | \
-            jq -r '.[] | select(.draft == true) | .id')
-
-          for DRAFT in $DRAFTS; do
-            echo "Deleting draft release ID: $DRAFT"
-            curl -X DELETE -H "Authorization: token $GITHUB_TOKEN" \
-              "https://api.github.com/repos/${{ github.repository }}/releases/$DRAFT"
-          done
-
-          # Get the list of all published releases and delete them
-          PUBLISHED_RELEASES=$(curl -s -H "Authorization: token $GITHUB_TOKEN" \
-            https://api.github.com/repos/${{ github.repository }}/releases | \
-            jq -r '.[] | select(.draft == false) | .id')
-
-          for RELEASE in $PUBLISHED_RELEASES; do
-            echo "Deleting published release ID: $RELEASE"
-            curl -X DELETE -H "Authorization: token $GITHUB_TOKEN" \
-              "https://api.github.com/repos/${{ github.repository }}/releases/$RELEASE"
-          done
-
       - name: Download GeoLite2 databases
         env:
           LICENSE_KEY: ${{ secrets.MAXMIND_GEOLITE2_LICENSE }}
@@ -136,13 +98,6 @@ jobs:
           cd geosite-build
           go run ./ --datapath=../community/data
 
-      - name: Purge jsdelivr CDN
-        run: |
-          cd output || exit 1
-          for file in $(ls); do
-            curl -i "https://purge.jsdelivr.net/gh/${{ github.repository }}@release/${file}"
-          done
-
       - name: Remove some files to avoid publishing to GitHub release
         run: |
           rm -rf ./output/lokal.txt
@@ -155,12 +110,29 @@ jobs:
         run: |
           install -Dp ./geosite-build/publish/geosite.dat ./output/geosite.dat
 
-      - name: Upload files to GitHub release
-        uses: svenstaro/upload-release-action@v2
+      - name: Release and upload assets
+        uses: softprops/action-gh-release@v2
         with:
-          repo_token: ${{ secrets.GITHUB_TOKEN }}
-          file_glob: true
-          file: ./output/*
-          release_name: ${{ env.RELEASE_NAME }}
-          tag: ${{ env.TAG_NAME }}
+          name: ${{ env.RELEASE_NAME }}
+          tag_name: ${{ env.TAG_NAME }}
+          draft: false
+          prerelease: false
+          files: ./output/*
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Purge jsdelivr CDN
+        run: |
+          cd output || exit 1
+          for file in $(ls); do
+            curl -i "https://purge.jsdelivr.net/gh/${{ github.repository }}@release/${file}"
+          done
+
+      - name: Delete Old Release
+        uses: dev-drprasad/delete-older-releases@v0.3.4
+        with:
+          repo: KhoirulAmsori/geoasset
+          keep_latest: 1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
