--- a/geoip-build/config.json
+++ b/geoip-build/config.json
@@ -47,7 +47,7 @@
       "type": "maxmindMMDB",
       "action": "output",
       "args": {
-        "outputDir": "./output",
+        "outputDir": "../output",
         "outputName": "Country.mmdb",
         "overwriteList": [
           "cn",
