--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -10,15 +10,25 @@ updates:
     schedule:
       interval: "daily"
       timezone: "Asia/Jakarta"
-      time: "07:00"
+      time: "23:00"
     pull-request-branch-name:
       separator: "-"
 
   - package-ecosystem: "gomod"
-    directory: "/"
+    directory: "/geoip-build"
     schedule:
       interval: "daily"
       timezone: "Asia/Jakarta"
-      time: "07:00"
+      time: "23:00"
     pull-request-branch-name:
       separator: "-"
+
+  - package-ecosystem: "gomod"
+    directory: "/geosite-build"
+    schedule:
+      interval: "daily"
+      timezone: "Asia/Jakarta"
+      time: "23:00"
+    pull-request-branch-name:
+      separator: "-"
+
