--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -8,7 +8,7 @@ updates:
   - package-ecosystem: "github-actions"
     directory: "/"
     schedule:
-      interval: "daily"
+      interval: "monthly"
       timezone: "Asia/Jakarta"
       time: "23:00"
     pull-request-branch-name:
@@ -17,7 +17,7 @@ updates:
   - package-ecosystem: "gomod"
     directory: "/geoip-build"
     schedule:
-      interval: "daily"
+      interval: "monthly"
       timezone: "Asia/Jakarta"
       time: "23:00"
     pull-request-branch-name:
@@ -26,7 +26,7 @@ updates:
   - package-ecosystem: "gomod"
     directory: "/geosite-build"
     schedule:
-      interval: "daily"
+      interval: "monthly"
       timezone: "Asia/Jakarta"
       time: "23:00"
     pull-request-branch-name:
