--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,6 +27,9 @@ jobs:
         env:
           GOPATH: /tmp/go-geoip-build
 
+      - name: Update Go dependencies
+        run: go mod tidy
+
       - name: Set variables
         run: |
           # Set timezone to Asia/Jakarta
@@ -97,6 +100,9 @@ jobs:
           cache-dependency-path: ./geosite-build/go.sum
         env:
           GOPATH: /tmp/go-geosite-build
+
+      - name: Update Go dependencies
+        run: go mod tidy
 
       - name: Create lists
         run: |
