--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -51,11 +51,10 @@ jobs:
           curl -L "https://download.maxmind.com/app/geoip_download?edition_id=GeoLite2-Country&license_key=${LICENSE_KEY}&suffix=tar.gz" -o ./geoip-build/asset/GeoLite2-Country.tar.gz
           curl -L "https://download.maxmind.com/app/geoip_download?edition_id=GeoLite2-Country-CSV&license_key=${LICENSE_KEY}&suffix=zip" -o ./geoip-build/asset/GeoLite2-Country-CSV.zip
 
-          cp ./geoip-build/asset/* ./output/
-
       - name: Prepare GeoLite2 databases
         run: |
           cd geoip-build
+          cp ./asset/* ../output/
           mkdir -p geolite2
           cp ../output/{*.gz,*.zip} ./
           
