--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -52,20 +52,15 @@ jobs:
           curl -L "https://download.maxmind.com/app/geoip_download?edition_id=GeoLite2-Country-CSV&license_key=${LICENSE_KEY}&suffix=zip" -o ./geoip-build/asset/GeoLite2-Country-CSV.zip
 
       # Push downloaded GeoLite2 files
-      - name: Configure Git
+      - name: Commit and Push Changes
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
-
-      - name: Add and Commit Changes
-        run: |
           git add geoip-build/asset/{*.gz,*.zip}
           git commit -m "Update geo asset."
-
-      - name: Push Changes
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: git push
+          git push origin main
 
       - name: Prepare GeoLite2 databases
         run: |
