--- a/.github/workflows/delete-old-workflows.yml
+++ b/.github/workflows/delete-old-workflows.yml
@@ -1,7 +1,7 @@
 name: Delete Old Workflow Runs
 on:
   schedule:
-    - cron: '00 20 * * *'
+    - cron: '0 18 * * 0'
   workflow_dispatch:
   repository_dispatch:
 
@@ -19,4 +19,3 @@ jobs:
           repository: ${{ github.repository }}
           retain_days: 0
           keep_minimum_runs: 1
-
