--- a/.github/workflows/delete-old-workflows.yml
+++ b/.github/workflows/delete-old-workflows.yml
@@ -1,7 +1,7 @@
 name: Delete Old Workflow Runs
 on:
   schedule:
-    - cron: "0 18 * * *"
+    - cron: "0 16 * * 0"
   workflow_dispatch:
   repository_dispatch:
 
