--- a/geoip-build/config.json
+++ b/geoip-build/config.json
@@ -10,12 +10,53 @@
       }
     },
     {
+      "type": "json",
+      "action": "add",
+      "args": {
+        "name": "google",
+        "uri": "https://www.gstatic.com/ipranges/goog.json",
+        "jsonPath": ["prefixes.#.ipv4Prefix"]
+      }
+    },
+    {
       "type": "maxmindGeoLite2ASNCSV",
       "action": "add",
       "args": {
         "ipv4": "./geolite2/GeoLite2-ASN-Blocks-IPv4.csv",
         "wantedList": {
           "facebook": ["AS63293", "AS54115", "AS32934"],
+          "google": [
+            "AS6432",
+            "AS55023",
+            "AS45566",
+            "AS43515",
+            "AS41264",
+            "AS40873",
+            "AS396982",
+            "AS395973",
+            "AS394699",
+            "AS394639",
+            "AS394507",
+            "AS36987",
+            "AS36492",
+            "AS36385",
+            "AS36384",
+            "AS36040",
+            "AS36039",
+            "AS26910",
+            "AS26684",
+            "AS22859",
+            "AS22577",
+            "AS19527",
+            "AS19448",
+            "AS19425",
+            "AS16591",
+            "AS16550",
+            "AS15169",
+            "AS13949",
+            "AS139190",
+            "AS139070"
+          ],
           "twitter": ["AS8945", "AS63179", "AS54888", "AS35995", "AS13414"]
         }
       }
@@ -54,17 +95,10 @@
           "cn",
           "private",
           "facebook",
+          "google",
           "twitter"
         ]
       }
-    },
-    {
-      "type": "clashRuleSetClassical",
-      "action": "output"
-    },
-    {
-      "type": "clashRuleSet",
-      "action": "output"
     }
   ]
 }
