--- a/geoip-build/config.json
+++ b/geoip-build/config.json
@@ -74,6 +74,15 @@
         "onlyIPType": "ipv4"
       }
     },
+    {
+      "type": "text",
+      "action": "add",
+      "args": {
+        "name": "google-safesearch",
+        "uri": "./asset/google-safesearch.txt",
+        "onlyIPType": "ipv4"
+      }
+    },
   ],
   "output": [
     {
