--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,6 +22,7 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v5
         with:
+          go-version: 1.22.5
           go-version-file: ./geoip-build/go.mod
           cache-dependency-path: ./geoip-build/go.sum
         env:
@@ -116,6 +117,7 @@ jobs:
       - name: Setup Go
         uses: actions/setup-go@v5
         with:
+          go-version: 1.22.5
           go-version-file: ./geosite-build/go.mod
           cache-dependency-path: ./geosite-build/go.sum
         env:
